# cop-2200c-c-programming

projects/custom-triangle-graphic-generator/: CMakeLists.txt  main.c
projects/diamond-shape-graphic-generator/: README.md  main.c
projects/overcooked-pasta-detector/: CMakeLists.txt  main.c
projects/physics-simulation-with-ai/: CMakeLists.txt  chatgpt.c  claude.c  gemini.c
projects/plane-struct-project/: CMakeLists.txt
projects/random-graphic-generation-with-loops/: CMakeLists.txt  README.md  main.c
projects/reading-binary-files-with-structs/: CMakeLists.txt  main.c  plane.h
projects/struct-to-binary/: CMakeLists.txt  games.h  main.c
projects/untitled/: main.c
